--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   cupertino_icons: ^0.1.3
   smooth_page_indicator:
   autocomplete_textfield:
+  webview_flutter:
+  gzx_dropdown_menu:
 
 dev_dependencies:
   flutter_test:
