Login Not Working

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   webview_flutter:
   gzx_dropdown_menu:
   auto_size_text: ^2.1.0
+  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.6
 
 dev_dependencies:
   flutter_test:
