--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,15 +16,16 @@ dependencies:
   cupertino_icons: ^0.1.3
   smooth_page_indicator: ^0.1.5
   autocomplete_textfield: ^1.7.3
-#  webview_flutter:
   gzx_dropdown_menu: ^2.1.0
   auto_size_text: ^2.1.0
   firebase_auth: ^0.16.1
   cloud_firestore: ^0.13.6
   filter_list: ^0.0.4
-  flutter_inappwebview: ^3.3.0+3
   smooth_star_rating: ^1.1.1
   social_share: ^2.0.4
+  webview_flutter: ^0.3.22+1
+  url_launcher:
+  # flutter_inappwebview: ^3.3.0+3
 
 
 dev_dependencies:
