--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_inappwebview: ^3.3.0+3
   flutter_email_sender: ^3.0.1
   image_picker: ^0.6.7+1
+  firebase_admob: ^0.9.3+2
 
 
 dev_dependencies:
